1-9-2023
--------
EVENTMODAL
    - EventForm will now enable/disable trash icon based on new/edit modal
    - date/dateTime inputs will now be prepopulated
    - when setting a NewEvent calendar type the Holidays type will force the user to choose an AllDayEvent
    - user can now delete an event from Calendar
    - updating styling
        - added trash icon and logic for active/disabled
        - layout of calendars and inputs
        - styling and animation of input placeholder
HOLIDAYS
- default holidays will not not be clickable or editable

1-8-2023
--------
- user can now edit customCalendar title and filter color

1-5-2023
--------
- user can now edit events from any calendar type

1-3-2023
--------
- added major US holidays to the calendar

1-2-2023
--------
- activeFilters are now persistent across page loads using localStorage

1-1-2023
--------
- events shown on calendar will now only display if they have an active filter

12-28-2022
----------
- created common/accordionHeader/AccordionHeader instead of using two different accordions for customCalendars and defaultCalendars
