@@ -112,6 +112,14 @@
       "singleDate": "2022-12-25T05:00:00.000Z",
       "allDay": true,
       "id": 31
+    },
+    {
+      "title": "Tester",
+      "filter": "Events",
+      "color": "rgb(0,0,0)",
+      "singleDate": "2023-01-13T05:00:00.000Z",
+      "allDay": true,
+      "id": 32
     }
   ]
 }
